<resources>
    <string name="app_name">ScheduleApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="create_new_task">Create new task</string>
    <string name="task_name">Task name</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="task_duration_hours">Task duration (hours)</string>
    <string name="priority">Priority</string>
    <string name="create_task">Create task</string>
    <string name="select_event_date">Select event date</string>
    <string name="task">Task</string>
    <string name="event">Event</string>
    <string name="enter_event_information">Enter event information</string>
    <string name="event_name">Event name</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="save_event">Save event</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_user_account">Create account</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="upcoming_tasks_and_events">Upcoming events</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="logout">Logout</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="_2018_09_01">2018-09-01</string>
    <string name="_2018_09_20">2018-09-20</string>
    <string name="medium_priority">Medium priority</string>
    <string name="length_12_hours">Length: 12 hours</string>
</resources>
