<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AccountManagementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            android:text="@string/logged_in_as"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/username"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_marginBottom="24dp"
            android:id="@+id/account_username"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/email"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/test_gmail_com"
            android:textColor="#000000"
            android:id="@+id/account_email"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:text="@string/logout"
            android:textSize="16sp"
            android:background="@drawable/rounded_button"
            android:textColor="#FFFFFF"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_marginTop="24dp"
            android:id="@+id/account_logout"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>