<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/bg_transparent_bordered">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/task_row_name"
            android:textSize="24sp"
            android:text="@string/task_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/_2018_09_01"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp"
                android:id="@+id/task_row_start"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/_2018_09_20"
                android:id="@+id/task_row_end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/medium_priority"
                android:layout_marginRight="40dp"
                android:layout_marginEnd="40dp"
                android:id="@+id/task_row_priority"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/length_12_hours"
                android:id="@+id/task_row_duration"
                android:layout_weight="1"/>

            <Button
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/baseline_delete_black_36"
                android:id="@+id/row_task_delete"/>

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>